# kitbit

./: .clang-format  .gitignore  Makefile  README.md  arduino-cli.yaml
KitBit/: KitBit.ino  bluetooth_uuids.h  watchdog.cpp  watchdog.h
kitbit-host/: Cargo.toml
kitbit-host/src/: main.rs
scripts/: monitor.sh
